--- a/quiz.html
+++ b/quiz.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Quiz</title>
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
