init assets and background

--- a/quiz.html
+++ b/quiz.html
@@ -16,62 +16,93 @@
 </head>
 <body>
 	<div class="container" id="home">
-			<form action="#" class="row">
-				<div class="col s12" id="question-01">
-					<p>01 - O que significa HTML?</p>
-					<p>
-						<input class="with-gap" name="question-01" type="radio" id="choose-01"  />
-						<label for="choose-01">Linguagem de programação pra WEB</label>
-					</p>
-					<p>
-						<input class="with-gap" name="question-01" type="radio" id="choose-02"  />
-						<label for="choose-02">Hyper Text Markup Language</label>
-					</p>
-					<p>
-						<input class="with-gap" name="question-01" type="radio" id="choose-03"  />
-						<label for="choose-03">Hiper Texto e Estilo de Marcação</label>
-					</p>
-					<p>
-						<input class="with-gap" name="question-01" type="radio" id="choose-04"  />
-						<label for="choose-04">Hiper Sônico com Marcação</label>
-					</p>
-					<p>
-						<input class="with-gap" name="question-01" type="radio" id="choose-05"  />
-						<label for="choose-05">HyperText Markup Language</label>
-					</p>
-					<button id="next-01">Próximo</button>
-				</div>
-				<div class="col s12" id="question-02">
-					<p>02 - O que significa HTML?</p>
-					<p>
-						<input class="with-gap" name="question-01" type="radio" id="choose-01"  />
-						<label for="choose-01">Linguagem de programação pra WEB</label>
-					</p>
-					<p>
-						<input class="with-gap" name="question-01" type="radio" id="choose-02"  />
-						<label for="choose-02">Hyper Text Markup Language</label>
-					</p>
-					<p>
-						<input class="with-gap" name="question-01" type="radio" id="choose-03"  />
-						<label for="choose-03">Hiper Texto e Estilo de Marcação</label>
-					</p>
-					<p>
-						<input class="with-gap" name="question-01" type="radio" id="choose-04"  />
-						<label for="choose-04">Hiper Sônico com Marcação</label>
-					</p>
-					<p>
-						<input class="with-gap" name="question-01" type="radio" id="choose-05"  />
-						<label for="choose-05">HyperText Markup Language</label>
-					</p>
-				</div>
-			</form>
+		<form action="#" class="row">
+			<div class="col s12" id="question-01">
+				<p>01 - O que significa HTML?</p>
+				<p>
+					<input class="with-gap" name="question-01" type="radio" id="question-01-choose-01"  />
+					<label for="question-01-choose-01">Linguagem de programação pra WEB</label>
+				</p>
+				<p>
+					<input class="with-gap" name="question-01" type="radio" id="question-01-choose-02"  />
+					<label for="question-01-choose-02">Hyper Text Markup Language</label>
+				</p>
+				<p>
+					<input class="with-gap" name="question-01" type="radio" id="question-01-choose-03"  />
+					<label for="question-01-choose-03">Hiper Texto e Estilo de Marcação</label>
+				</p>
+				<p>
+					<input class="with-gap" name="question-01" type="radio" id="question-01-choose-04"  />
+					<label for="question-01-choose-04">Hiper Sônico com Marcação</label>
+				</p>
+				<p>
+					<input class="with-gap" name="question-01" type="radio" id="question-01-choose-05"  />
+					<label for="question-01-choose-05">HyperText Markup Language</label>
+				</p>
+				<div class="waves-effect waves-light btn cyan accent-4" id="next-01">Próximo</div>
+			</div>
+			<div class="col s12" id="question-02">
+				<p>02 - O que significa HTML?</p>
+				<p>
+					<input class="with-gap" name="question-02" type="radio" id="question-02-choose-01"  />
+					<label for="question-02-choose-01">Linguagem de programação pra WEB</label>
+				</p>
+				<p>
+					<input class="with-gap" name="question-02" type="radio" id="question-02-choose-02"  />
+					<label for="question-02-choose-02">Hyper Text Markup Language</label>
+				</p>
+				<p>
+					<input class="with-gap" name="question-02" type="radio" id="question-02-choose-03"  />
+					<label for="question-02-choose-03">Hiper Texto e Estilo de Marcação</label>
+				</p>
+				<p>
+					<input class="with-gap" name="question-02" type="radio" id="question-02-choose-04"  />
+					<label for="question-02-choose-04">Hiper Sônico com Marcação</label>
+				</p>
+				<p>
+					<input class="with-gap" name="question-02" type="radio" id="question-02-choose-05"  />
+					<label for="question-02-choose-05">HyperText Markup Language</label>
+				</p>
+				<div class="waves-effect waves-light btn cyan accent-4" id="next-02">Próximo</div>
+			</div>
+			<div class="col s12" id="question-03">
+				<p>03 - O que significa HTML?</p>
+				<p>
+					<input class="with-gap" name="question-03" type="radio" id="question-03-choose-01"  />
+					<label for="question-03-choose-01">Linguagem de programação pra WEB</label>
+				</p>
+				<p>
+					<input class="with-gap" name="question-03" type="radio" id="question-03-choose-02"  />
+					<label for="question-03-choose-02">Hyper Text Markup Language</label>
+				</p>
+				<p>
+					<input class="with-gap" name="question-03" type="radio" id="question-03-choose-03"  />
+					<label for="question-03-choose-03">Hiper Texto e Estilo de Marcação</label>
+				</p>
+				<p>
+					<input class="with-gap" name="question-03" type="radio" id="question-03-choose-04"  />
+					<label for="question-03-choose-04">Hiper Sônico com Marcação</label>
+				</p>
+				<p>
+					<input class="with-gap" name="question-03" type="radio" id="question-03-choose-05"  />
+					<label for="question-03-choose-05">HyperText Markup Language</label>
+				</p>
+			</div>
+		</form>
 	</div>
 
 		<script type="text/javascript">
+			var timeHide = 500;
+			var timeShow = 1000;
 			$('#question-02').hide();
+			$('#question-03').hide();
 			$("#next-01").click(function(){
-				$('#question-01').hide(500);
-				$('#question-02').show(1000);
+				$('#question-01').hide(timeHide);
+				$('#question-02').show(timeShow);
+			});
+			$("#next-02").click(function(){
+				$('#question-02').hide(timeHide);
+				$('#question-03').show(timeShow);
 			});
 		</script>
 
