--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="container" id="home">
 		<div class="row">
 	        <div class="col s12 m6 offset-s3">
-				<div class="card blue lighten-5 z-depth-5">
+				<div class="card">
 					<h1 class="center-align">QUIZ</h1>
 					<form action="quiz.html">
 						<div class="row">
