--- a/quiz.html
+++ b/quiz.html
@@ -2,19 +2,47 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Quiz</title>
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="plugin/materialize/css/materialize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/home.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<link rel="stylesheet" type="text/css" href="css/quiz.css">
+
+	<script type="text/javascript" src="plugin/jquery/jquery-3.2.0.min.js"></script>
+	<script src="https://use.fontawesome.com/aa2928776d.js"></script>
+	<script type="text/javascript" src="plugin/materialize/js/materialize.min.js"></script>
 </head>
 <body>
 	<div class="container" id="home">
 			<form action="#" class="row">
-				<div class="col s12">
-					<p>O que significa HTML?</p>
+				<div class="col s12" id="question-01">
+					<p>01 - O que significa HTML?</p>
+					<p>
+						<input class="with-gap" name="question-01" type="radio" id="choose-01"  />
+						<label for="choose-01">Linguagem de programação pra WEB</label>
+					</p>
+					<p>
+						<input class="with-gap" name="question-01" type="radio" id="choose-02"  />
+						<label for="choose-02">Hyper Text Markup Language</label>
+					</p>
+					<p>
+						<input class="with-gap" name="question-01" type="radio" id="choose-03"  />
+						<label for="choose-03">Hiper Texto e Estilo de Marcação</label>
+					</p>
+					<p>
+						<input class="with-gap" name="question-01" type="radio" id="choose-04"  />
+						<label for="choose-04">Hiper Sônico com Marcação</label>
+					</p>
+					<p>
+						<input class="with-gap" name="question-01" type="radio" id="choose-05"  />
+						<label for="choose-05">HyperText Markup Language</label>
+					</p>
+					<button id="next-01">Próximo</button>
+				</div>
+				<div class="col s12" id="question-02">
+					<p>02 - O que significa HTML?</p>
 					<p>
 						<input class="with-gap" name="question-01" type="radio" id="choose-01"  />
 						<label for="choose-01">Linguagem de programação pra WEB</label>
@@ -38,8 +66,14 @@
 				</div>
 			</form>
 	</div>
-	<script type="text/javascript" src="plugin/jquery/jquery-3.2.0.min.js"></script>
-	<script src="https://use.fontawesome.com/aa2928776d.js"></script>
-	<script type="text/javascript" src="plugin/materialize/js/materialize.min.js"></script>
+
+		<script type="text/javascript">
+			$('#question-02').hide();
+			$("#next-01").click(function(){
+				$('#question-01').hide(500);
+				$('#question-02').show(1000);
+			});
+		</script>
+
 </body>
 </html>
